# juswriteit

./: .gitignore  Cargo.toml  LICENSE  Project Plan_ juswriteit (Rust_GTK).md  README.md  build-appimage.sh
.github/workflows/: build-appimage.yml
assets/dextop/: penscript.desktop
docs/: release-guide.md
src/: main.rs  note.rs  style.css  ui.rs  utils.rs
